# multisnake

./: .clang-format  .clang-tidy  CMakeLists.txt  out.txt
src/: CMakeLists.txt  constants.hpp
src/engine/: CMakeLists.txt
src/engine/engine/: engine.cpp  engine.hpp  input.cpp  input.hpp  time.cpp  time.hpp
src/game/: CMakeLists.txt
src/game/game/: main.cpp
src/level/: CMakeLists.txt
src/level/level/: collision.cpp  collision.hpp  level.cpp  level.hpp
src/network/: CMakeLists.txt
src/network/network/: client.cpp  client.hpp  network.cpp  network.hpp  server.cpp  server.hpp
src/objects/: CMakeLists.txt
src/objects/objects/: object.cpp  object.hpp  player.cpp  player.hpp  spawner.cpp  spawner.hpp
